# Podcast-Updates

./: .gitignore  .stignore  README.md  pyproject.toml  setup.sh
config/: .env.example  prompt.md  prompt_claude.md  prompt_claude_finance.md  prompt_claude_parenting.md  prompt_claude_tech.md  prompt_extract.md  prompt_finance.md  prompt_ledger_update.md  prompt_parenting.md  prompt_tech.md  shows.yaml  shows_finance.yaml  shows_parenting.yaml  shows_tech.yaml
launchd/: com.podcast-updates.finance.plist  com.podcast-updates.news.plist  com.podcast-updates.parenting.plist  com.podcast-updates.tech.plist  com.podcast-updates.watch.plist
scripts/: sync.sh
src/: analyze.py  config.py  deliver.py  download_audio.py  episode_ledger.py  fetch_rss.py  fetch_transcripts.py  pipeline.py  theme_ledger.py  transcribe.py  watcher.py
